--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "dependencies": {
         "mint-ui": "^2.2.13",
-        "vue": "^2.5.11"
+        "vue": "^2.5.11",
+        "vue-router": "^3.1.3"
     },
     "browserslist": [
         "> 1%",
@@ -26,9 +27,10 @@
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
-        "file-loader": "^1.1.4",
+        "file-loader": "^1.1.11",
         "node-sass": "^4.5.3",
         "sass-loader": "^6.0.6",
+        "url-loader": "^2.1.0",
         "vue-loader": "^13.0.5",
         "vue-template-compiler": "^2.4.4",
         "webpack": "^3.6.0",
