--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-    "name": "veuproj",
-    "description": "{{ description }}",
+    "name": "01.webpack-study",
     "version": "1.0.0",
-    "author": "{{ author }}",
-    "license": "{{ license }}",
-    "private": true,
+    "description": "",
+    "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack&&webpack-dev-server --open --port 4000 --hot"
     },
-    "dependencies": {
-        "mint-ui": "^2.2.13",
-        "vue": "^2.5.11",
-        "vue-router": "^3.1.3"
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ],
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
-        "babel-plugin-component": "^1.1.1",
-        "babel-preset-env": "^1.6.0",
-        "babel-preset-stage-3": "^6.24.1",
-        "cross-env": "^5.0.5",
+        "babel-plugin-component": "^0.10.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-stage-0": "^6.24.1",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.11",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^2.30.1",
+        "less": "^2.7.3",
+        "less-loader": "^4.0.5",
         "node-sass": "^4.5.3",
         "sass-loader": "^6.0.6",
-        "url-loader": "^2.1.0",
-        "vue-loader": "^13.0.5",
-        "vue-template-compiler": "^2.4.4",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1"
+        "style-loader": "^0.19.0",
+        "url-loader": "^0.6.2",
+        "vue-loader": "^13.3.0",
+        "vue-template-compiler": "^2.5.2",
+        "webpack": "^3.8.1",
+        "webpack-dev-server": "^2.9.3"
+    },
+    "dependencies": {
+        "bootstrap": "^3.3.7",
+        "mint-ui": "^2.2.9",
+        "vue": "^2.5.2",
+        "vue-resource": "^1.3.4",
+        "vue-router": "^3.0.1"
     }
 }
